envoy.yaml
static_resources:
  listeners:
  - name: virtualInbound
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15006
    filter_chains:
    - filter_chain_match:
        destination_port: 8080
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: inbound_0.0.0.0_8080
          route_config:
            name: inbound|8080||
            virtual_hosts:
            - name: inbound|http|8080
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: inbound|8080||
                  timeout: 0s
                  max_stream_duration:
                    max_stream_duration: 0s
                name: default
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          server_name: istio-envoy
          use_remote_address: false
          upgrade_configs:
          - upgrade_type: websocket
          stream_idle_timeout: 0s
          normalize_path: true
      name: 0.0.0.0_8080
    listener_filters:
    - name: envoy.filters.listener.original_dst
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
      filter_disabled:
        destination_port_range:
          start: 8080
          end: 8081
    listener_filters_timeout: 0s
    traffic_direction: INBOUND
    continue_on_listener_filters_timeout: true
    access_log:
    - name: envoy.file_access_log
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/stdout
  - name: virtualOutbound
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    use_original_dst: true
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: passthrough
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.direct_response.v3.Config
          response:
            inline_string: passthrough
    access_log:
    - name: envoy.file_access_log
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/stdout
  - name: 0.0.0.0_9080
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: outbound_0.0.0.0_9080
          route_config:
            name: "9080"
            virtual_hosts:
            - name: ${ISTIO_SERVICE}.default.svc.cluster.local:9080
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: outbound|9080||${ISTIO_SERVICE}.default.svc.cluster.local
                  timeout: 0s
                  retry_policy:
                    retry_on: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
                    num_retries: 2
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    host_selection_retry_max_attempts: "5"
                    retriable_status_codes:
                    - 503
                  max_stream_duration:
                    max_stream_duration: 0s
                name: default
              include_request_attempt_count: true
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          use_remote_address: false
          upgrade_configs:
          - upgrade_type: websocket
          stream_idle_timeout: 0s
          normalize_path: true
    deprecated_v1:
      bind_to_port: false
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    listener_filters_timeout: 0s
    traffic_direction: OUTBOUND
    continue_on_listener_filters_timeout: true
    access_log:
    - name: envoy.file_access_log
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/stdout
        format: OUTBOUND
  clusters:
  - name: outbound|9080||${ISTIO_SERVICE}.default.svc.cluster.local
    type: STRICT_DNS
    connect_timeout: 10s
    dns_refresh_rate: 5s
    dns_lookup_family: V4_ONLY
    respect_dns_ttl: true
    circuit_breakers:
      thresholds:
      - max_connections: 4294967295
        max_pending_requests: 4294967295
        max_requests: 4294967295
        max_retries: 4294967295
    load_assignment:
      cluster_name: outbound|9080||${ISTIO_SERVICE}.default.svc.cluster.local
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${ISTIO_SERVICE}.default
                port_value: 9080
  - name: inbound|8080||
    type: STATIC
    connect_timeout: 10s
    circuit_breakers:
      thresholds:
      - max_connections: 4294967295
        max_pending_requests: 4294967295
        max_requests: 4294967295
        max_retries: 4294967295
    load_assignment:
      cluster_name: inbound|8080||
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  profile_path: "/var/lib/istio/data/envoy.prof"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15000
node:
  id: sidecar~~~default.svc.cluster.local
  cluster: test
layered_runtime:
  layers:
  - name: deprecation
    static_layer:
      envoy.reloadable_features.strict_1xx_and_204_response_headers: false
      envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst: true
      re2.max_program_size.error_level: 1024
  - name: global config
    static_layer:
      overload.global_downstream_max_connections: 2147483647
  - name: admin
    admin_layer: {}
